--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@
 version: 2
 updates:
   - package-ecosystem: "cargo" # See documentation for possible values
-    directory: "/**/Cargo.toml" # Location of package manifests
+    directories: "/**/Cargo.toml" # Location of package manifests
     schedule:
       interval: "weekly"
