--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -48,15 +48,15 @@ jobs:
       - name: Linting
         run: just lint
 
-  coverage:
-    name: Code coverage
-    runs-on: ubuntu-latest
-    container:
-      image: xd009642/tarpaulin
-      options: --security-opt seccomp=unconfined
-    steps:
-      - uses: extractions/setup-just@v2
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Generate code coverage
-        run: just coverage
+  # coverage:
+  #   name: Code coverage
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: xd009642/tarpaulin
+  #     options: --security-opt seccomp=unconfined
+  #   steps:
+  #     - uses: extractions/setup-just@v2
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #     - name: Generate code coverage
+  #       run: just coverage
